--- a/package.json
+++ b/package.json
@@ -8,14 +8,20 @@
     "gatsby"
   ],
   "scripts": {
-    "develop": "gatsby develop",
+    "develop": "env-cmd -f .env.development gatsby develop",
     "start": "gatsby develop",
     "build": "gatsby build",
     "serve": "gatsby serve",
     "clean": "gatsby clean"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.15.2",
+    "env-cmd": "^10.1.0",
     "gatsby": "^2.26.1",
+    "gatsby-plugin-sass": "^3.1.0",
+    "gatsby-plugin-transition-link": "^1.20.5",
+    "gsap": "^3.6.0",
+    "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1"
   }
