--- a/package.json
+++ b/package.json
@@ -18,11 +18,13 @@
     "@fortawesome/fontawesome-free": "^5.15.2",
     "env-cmd": "^10.1.0",
     "gatsby": "^2.26.1",
+    "gatsby-plugin-react-helmet": "^3.9.0",
     "gatsby-plugin-sass": "^3.1.0",
     "gatsby-plugin-transition-link": "^1.20.5",
     "gsap": "^3.6.0",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "react-dom": "^16.13.1",
+    "react-helmet": "^6.1.0"
   }
 }
